--- a/src/main/java/projeto/unipar/java_front_end_desktop_pdv/View/Pdv.form
+++ b/src/main/java/projeto/unipar/java_front_end_desktop_pdv/View/Pdv.form
@@ -135,13 +135,13 @@
                       <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jtfEmail" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jbFinalizar" alignment="3" min="-2" pref="78" max="-2" attributes="0"/>
                       <Component id="jbAddCliente" alignment="3" min="-2" pref="78" max="-2" attributes="0"/>
                       <Component id="jbAddProduto" alignment="3" min="-2" pref="78" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
