--- a/src/main/java/projeto/unipar/java_front_end_desktop_pdv/View/Pdv.form
+++ b/src/main/java/projeto/unipar/java_front_end_desktop_pdv/View/Pdv.form
@@ -171,6 +171,7 @@
                     <Column editable="false" title="Valor Total" type="java.lang.Object"/>
                   </Table>
                 </Property>
+                <Property name="toolTipText" type="java.lang.String" value="Clique com bot&#xe3;o direito do mouse para deletar um produto"/>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="0">
                     <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
