--- a/src/main/java/projeto/unipar/java_front_end_desktop_pdv/View/CadastrarCliente.form
+++ b/src/main/java/projeto/unipar/java_front_end_desktop_pdv/View/CadastrarCliente.form
@@ -137,6 +137,9 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
           </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="createFormattedTextField()"/>
+          </AuxValues>
         </Component>
         <Component class="javax.swing.JTextField" name="jtfEmailCliente">
           <Properties>
